# efs

./: .rustfmt.toml  Cargo.toml  README.md  deny.toml  flake.nix  rust-toolchain.toml
.forgejo/workflows/: build.yml
src/: arch.rs  error.rs  file.rs  io.rs  lib.rs  path.rs  permissions.rs  tests.rs  types.rs
src/dev/: address.rs  bitmap.rs  celled.rs  error.rs  mod.rs  sector.rs
src/fs/: error.rs  mod.rs
src/fs/ext2/: block.rs  block_group.rs  directory.rs  entry.rs  error.rs  file.rs  indirection.rs  inode.rs  mod.rs  superblock.rs
src/fs/structures/: bitmap.rs  indirection.rs
tests/: lorem.txt
tests/fs/ext2/: io_operations.ext2
