[package]
name = "efs"
version = "0.3.2"
authors = ["RatCornu <ratcornu@skaven.org>"]
edition = "2021"
description = "An OS and architecture independent implementation of some Unix filesystems in Rust."
documentation = "https://docs.rs/efs/"
readme = "README.md"
homepage = "https://codeberg.org/RatCornu/efs"
repository = "https://codeberg.org/RatCornu/efs"
license = "GPL-3.0"
keywords = ["filesystem", "no-std"]
categories = ["filesystem", "no-std"]

[dependencies]
bitflags = "2"
derive_more = "0.99"
itertools = { version = "0.11", default-features = false, features = ["use_alloc"] }
once_cell = "1"
regex = "1"

[dev-dependencies]
efs = { path = ".", default-features = false, features = ["ext2", "std"] }
itertools = { version = "0.11", default-features = true }
tempfile = "3"

[features]
default = ["ext2"]
ext2 = []
std = []

[lints.clippy]
complexity = "deny"
correctness = "deny"
nursery = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"

[lints.rust]
missing_docs = "deny"
